[metadata]
name = gym-paneldepon
version = 1.0.0.post+gitver
description = OpenAI Gym Environment for Panel de Pon
long_description = file: README.md
author = Lumi Pakkanen
author_email = lumi.pakkanen@gmail.com
maintainer = Lumi Pakkanen
maintainer_email = lumi.pakkanen@gmail.com
url = https://github.com/frostburn/gym-paneldepon
download_url = https://github.com/frostburn/gym-paneldepon/releases
license = MIT
keywords = gym, AI
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
install_requires =
    gym>=0.9.0,<1

[options.packages.find]
exclude = tests, tests.*

[tool:pytest]

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pep8]
max-line-length = 120
exclude=.tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[bdist_wheel]
pythontag = py35

[isort]
multi_line_output = 4
skip=.tox,dist,venv
not_skip = __init__.py
known_third_party = six